--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation group: 'com.google.guava', name: 'guava', version: '27.0.1-android'
+
+    implementation 'com.android.volley:volley:1.1.1'
 }
