--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,5 @@ dependencies {
     implementation group: 'com.google.guava', name: 'guava', version: '27.0.1-android'
 
     implementation 'com.android.volley:volley:1.1.1'
+    implementation "com.android.support:support-compat:28.0.0"
 }
